fixing about image layout on mobile

--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -72,10 +72,7 @@
 }
 
 .aboutImageWrapper {
-    /* display: inline-block; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: inline-block;
     justify-content: center;
     width: 65vw;
     padding: 1em;
@@ -90,6 +87,9 @@
 
 @media (min-width: 768px) {
     .aboutImageWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
     }
 }
